--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                             <div class="bg-navy p-6 rounded text-white">
                                 <h3 class="text-brandYellow font-bold mb-2 text-sm uppercase">Car & Specialty</h3>
                                 <p class="text-[10px] text-slate-300 mb-4 leading-relaxed">CAR DETAILING, CUSTOM PROJECTS, AND ONE-TIME JOBS IN CAYMAN.</p>
-                                <a href="#quote" class="inline-block bg-brandYellow text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-white transition">Request Quote</a>
+                                <a href="#quote" class="inline-block bg-brandYellow text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-white transition">Contact US</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <a href="#gallery" class="nav-link hover:text-brandYellow transition">Our Work</a>
-                <a href="#quote" class="bg-brandYellow text-navy px-8 py-3 rounded font-black hover:bg-navy hover:text-white border-2 border-brandYellow transition shadow-md">GET A FREE QUOTE</a>
+                <a href="#quote" class="bg-brandYellow text-navy px-8 py-3 rounded font-black hover:bg-navy hover:text-white border-2 border-brandYellow transition shadow-md">GET IN TOUCH WITH US</a>
             </div>
         </div>
     </nav>
@@ -174,7 +174,7 @@
             </a>
             <div class="pt-10">
                 <a href="#quote" class="block text-center bg-navy text-white font-black py-4 rounded-lg uppercase tracking-widest shadow-lg hover:bg-brandYellow hover:text-navy transition-all">
-                    Get Free Quote
+                    Get in Touch with Us
                 </a>
             </div>
         </nav>
@@ -605,4 +605,5 @@
         });
     </script>
 </body>
+
 </html>
