--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
                             <div class="bg-navy p-6 rounded text-white">
                                 <h3 class="text-brandYellow font-bold mb-2 text-sm uppercase">Car & Specialty</h3>
                                 <p class="text-[10px] text-slate-300 mb-4 leading-relaxed">CAR DETAILING, CUSTOM PROJECTS, AND ONE-TIME JOBS IN CAYMAN.</p>
-                                <a href="#quote" class="inline-block bg-brandYellow text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-white transition">Contact US</a>
+                                <a href="#quote" class="inline-block bg-brandYellow text-navy text-[10px] px-4 py-2 rounded font-black uppercase tracking-widest hover:bg-white transition">Contact us Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <a href="#gallery" class="nav-link hover:text-brandYellow transition">Our Work</a>
-                <a href="#quote" class="bg-brandYellow text-navy px-8 py-3 rounded font-black hover:bg-navy hover:text-white border-2 border-brandYellow transition shadow-md">GET IN TOUCH WITH US</a>
+                <a href="#quote" class="bg-brandYellow text-navy px-8 py-3 rounded font-black hover:bg-navy hover:text-white border-2 border-brandYellow transition shadow-md">Contact us Now</a>
             </div>
         </div>
     </nav>
@@ -174,7 +174,7 @@
             </a>
             <div class="pt-10">
                 <a href="#quote" class="block text-center bg-navy text-white font-black py-4 rounded-lg uppercase tracking-widest shadow-lg hover:bg-brandYellow hover:text-navy transition-all">
-                    Get in Touch with Us
+                     Contact us Now
                 </a>
             </div>
         </nav>
@@ -202,7 +202,7 @@
                 <h1 class="text-3xl md:text-xl mb-6 leading-tight uppercase">Your Go-To Experts for Home Projects, Maintenance & Electrical Solutions</h1>
                 <p class="text-xl text-slate-200 mb-10 max-w-2xl font-light">Dedicated property care, maintenance, and professional electrical work across all Grand Cayman districts.</p>
                 <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="#quote" class="bg-brandYellow text-navy px-10 py-5 font-black text-lg uppercase transition hover:bg-white border-2 border-brandYellow">Get a Free Quote</a>
+                    <a href="#quote" class="bg-brandYellow text-navy px-10 py-5 font-black text-lg uppercase transition hover:bg-white border-2 border-brandYellow">Contact us Now</a>
                     <a href="tel:9391668" class="bg-transparent border-2 border-white text-white px-10 py-5 font-black text-lg uppercase transition hover:bg-brandYellow hover:text-navy hover:border-brandYellow flex items-center justify-center">
                         <i class="fas fa-phone mr-3"></i> Call Now: 939-1668
                     </a>
@@ -605,5 +605,4 @@
         });
     </script>
 </body>
-
 </html>
