--- a/index.html
+++ b/index.html
@@ -295,10 +295,9 @@
                      Contact us Now
                 </a>
             </div>
-           <button onclick="secureLogout()" 
-    class="bg-red-600 text-white px-4 py-2 rounded text-xs font-bold uppercase tracking-widest hover:bg-red-700 transition">
-    Log Out
-</button>
+                  <a href="login.html" class="bg-brandBlue text-white px-4 py-2 rounded shadow-md">
+    Admin Portal
+</a>
         </nav>
 
         <div class="mt-auto pt-10 border-t border-brandYellow">
