--- a/index.html
+++ b/index.html
@@ -64,13 +64,7 @@
         firebase.initializeApp(firebaseConfig);
         const auth = firebase.auth();
 
-    // STRICT SESSION GUARD
-    auth.onAuthStateChanged((user) => {
-        if (!user) {
-            // Replace history so the "Back" arrow won't work
-            window.location.replace("login.html");
-        }
-    });
+   
     </script>
 
     <script src="https://cdn.tailwindcss.com"></script>
@@ -776,7 +770,12 @@
         }
     });
     // Add this inside your existing <script> tag in index.html
-
+function secureLogout() {
+    auth.signOut().then(() => {
+        // Clear history and force return to login
+        window.location.replace("login.html");
+    });
+}
 </script>
    <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
