Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@
 function secureLogout() {
     auth.signOut().then(() => {
         // Clear history and force return to login
-        window.location.replace("index.html");
+        window.location.replace("login.html");
     });
 }
 </script>
