--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
 function secureLogout() {
     auth.signOut().then(() => {
         // Clear history and force return to login
-        window.location.replace("login.html");
+        window.location.replace("index.html");
     });
 }
 </script>
