Fix HTML encoding issues in gallery.html

--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
    <nav class="bg-white border-b border-slate-200 py-4 px-6">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
         <a href="index.html" class="text-slate-500 hover:text-slate-900 flex items-center gap-2 transition-colors">
-            <i class="fas fa-home"></i> View Site
+            <i class="fas fa-home"></i> Go Back to Visitors Page
         </a>
         <div class="flex items-center gap-4">
             <span class="bg-slate-100 text-slate-600 px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider">Admin Panel</span>
@@ -270,4 +270,5 @@ document.getElementById('toggleFormBtn').addEventListener('click', () => {
 </script>
 
 </body>
+
 </html>
