--- a/index.html
+++ b/index.html
@@ -375,6 +375,33 @@
         <div class="area-card">East End</div>
     </div>
 </section>
+
+ <!-- Live Gallery Section -->
+    <section id="gallery" class="bg-gray-200 py-24">
+        <div class="max-w-6xl mx-auto px-6">
+            <div class="flex flex-col md:flex-row justify-between items-end mb-12 gap-6">
+                <div>
+                    <h2 class="text-3xl font-bold mb-2">Our Recent Projects</h2>
+                    <p class="text-slate-500">Filter by service to see our expertise in action.</p>
+                </div>
+                <!-- Filters -->
+                <div id="filterContainer" class="flex gap-2 overflow-x-auto pb-2 min-w-max">
+                    <button class="filter-btn active px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('All')">All</button>
+                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Electrical')">Electrical</button>
+                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Maintenance')">Maintenance</button>
+                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Plumbing')">Plumbing</button>
+                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Remodel')">Remodel</button>
+                </div>
+            </div>
+
+            <!-- Gallery Grid -->
+            <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div id="loader" class="col-span-full flex flex-col items-center justify-center py-20">
+                    <div class="animate-spin rounded-full h-12 w-12 border-t-2 border-b-2 border-blue-500"></div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="about" class="py-24 bg-slate-50 overflow-hidden">
         <div class="container mx-auto px-4">
             <div class="flex flex-col lg:flex-row items-center gap-16">
@@ -619,32 +646,6 @@
  
   
    
- <!-- Live Gallery Section -->
-    <section id="gallery" class="bg-slate-50 py-24">
-        <div class="max-w-6xl mx-auto px-6">
-            <div class="flex flex-col md:flex-row justify-between items-end mb-12 gap-6">
-                <div>
-                    <h2 class="text-3xl font-bold mb-2">Our Recent Projects</h2>
-                    <p class="text-slate-500">Filter by service to see our expertise in action.</p>
-                </div>
-                <!-- Filters -->
-                <div id="filterContainer" class="flex gap-2 overflow-x-auto pb-2 min-w-max">
-                    <button class="filter-btn active px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('All')">All</button>
-                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Electrical')">Electrical</button>
-                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Maintenance')">Maintenance</button>
-                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Plumbing')">Plumbing</button>
-                    <button class="filter-btn px-5 py-2 rounded-full border border-slate-300 text-sm font-medium transition-all" onclick="window.setFilter('Remodel')">Remodel</button>
-                </div>
-            </div>
-
-            <!-- Gallery Grid -->
-            <div id="galleryGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <div id="loader" class="col-span-full flex flex-col items-center justify-center py-20">
-                    <div class="animate-spin rounded-full h-12 w-12 border-t-2 border-b-2 border-blue-500"></div>
-                </div>
-            </div>
-        </div>
-    </section>
            
     <footer class="bg-navy text-white pt-20 pb-10 px-4">
         <div class="container mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 border-b border-brandDark/20 pb-16">
