--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
             <div class="max-w-4xl">
                 <div class="flex items-center space-x-2 mb-6">
                     <span class="bg-brandYellow text-white px-3 py-1 text-xs font-black uppercase tracking-tighter">Licensed & Insured</span>
-                    <span class="w-12 h-[2px] bg-brandYellow"></span>
+                    <span class="w-12 h-[2px] bg-white"></span>
                 </div>
                 <h1 class="text-3xl md:text-xl mb-6 leading-tight uppercase">Your Go-To Experts for Home Projects, Maintenance & Electrical Solutions</h1>
                 <p class="text-xl text-slate-200 mb-10 max-w-2xl font-light">Dedicated property care, maintenance, and professional electrical work across all Grand Cayman districts.</p>
                 <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="#quote" class="bg-brandYellow text-white px-10 py-5 font-black text-lg uppercase transition hover:bg-brandBlue border-2 border-brandDark">Contact us Now</a>
+                    <a href="#quote" class="bg-brandYellow text-white px-10 py-5 font-black text-lg uppercase transition hover:bg-brandBlue border-2 border-white">Contact us Now</a>
                     <a href="tel:9391668" class="bg-transparent border-2 border-white text-white px-10 py-5 font-black text-lg uppercase transition hover:bg-brandYellow hover:text-navy hover:border-brandDark justify-center">
                         <i class="fas fa-phone mr-3"></i> Call Now: 939-1668
                     </a>
@@ -345,17 +345,17 @@
                     <p class="text-sm text-gray-500 leading-relaxed">Fully qualified teams providing peace of mind for every project, small or large.</p>
                 </div>
                 <div class="p-10 border-r border-b border-brandDark card-hover bg-navy text-white">
-                    <i class="fas fa-truck text-4xl text-brandYellow mb-6"></i>
+                    <i class="fas fa-truck text-4xl text-[yellow] mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Owned Equipment</h3>
                     <p class="text-sm text-white leading-relaxed">All equipment is owned and maintained by us. No rentals means zero delays for you.</p>
                 </div>
                 <div class="p-10 border-r border-b border-brandDark card-hover">
-                    <i class="fas fa-map-marked-alt text-4xl text-brandYellow mb-6"></i>
+                    <i class="fas fa-map-marked-alt text-4xl text-[yellow] mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Local Offices</h3>
                     <p class="text-sm text-gray-500 leading-relaxed">Warehouses in Bodden Town and George Town for lightning-fast response times.</p>
                 </div>
                 <div class="p-10 border-b border-brandDark card-hover">
-                    <i class="fas fa-star text-4xl text-brandYellow mb-6"></i>
+                    <i class="fas fa-star text-4xl text-[yellow] mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Pro & Reliable</h3>
                     <p class="text-sm text-gray-500 leading-relaxed">Residential & Commercial experts dedicated to high-quality craftsmanship.</p>
                 </div>
