--- a/index.html
+++ b/index.html
@@ -345,17 +345,17 @@
                     <p class="text-sm text-gray-500 leading-relaxed">Fully qualified teams providing peace of mind for every project, small or large.</p>
                 </div>
                 <div class="p-10 border-r border-b border-brandDark card-hover bg-navy text-white">
-                    <i class="fas fa-truck text-4xl text-[yellow] mb-6"></i>
+                    <i class="fas fa-truck text-4xl text-white mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Owned Equipment</h3>
                     <p class="text-sm text-white leading-relaxed">All equipment is owned and maintained by us. No rentals means zero delays for you.</p>
                 </div>
                 <div class="p-10 border-r border-b border-brandDark card-hover">
-                    <i class="fas fa-map-marked-alt text-4xl text-[yellow] mb-6"></i>
+                    <i class="fas fa-map-marked-alt text-4xl text-brandBlue mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Local Offices</h3>
                     <p class="text-sm text-gray-500 leading-relaxed">Warehouses in Bodden Town and George Town for lightning-fast response times.</p>
                 </div>
                 <div class="p-10 border-b border-brandDark card-hover">
-                    <i class="fas fa-star text-4xl text-[yellow] mb-6"></i>
+                    <i class="fas fa-star text-4xl text-brandBlue mb-6"></i>
                     <h3 class="text-lg uppercase mb-4 font-bold">Pro & Reliable</h3>
                     <p class="text-sm text-gray-500 leading-relaxed">Residential & Commercial experts dedicated to high-quality craftsmanship.</p>
                 </div>
@@ -498,7 +498,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-brandYellow text-xs">
+                        <div class="flex text-[yellow] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
@@ -512,7 +512,7 @@
 
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-brandYellow text-xs">
+                        <div class="flex text-[yellow] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
@@ -526,7 +526,7 @@
 
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-brandYellow text-xs">
+                        <div class="flex text-[yellow] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
