--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-6xl mx-auto">
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-[yellow] text-xs">
+                        <div class="flex text-[#FFDB58] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
@@ -512,7 +512,7 @@
 
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-[yellow] text-xs">
+                        <div class="flex text-[#FFDB58] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
@@ -526,7 +526,7 @@
 
                 <div class="bg-white text-navy p-6 rounded-2xl shadow-xl relative card-hover">
                     <div class="flex items-center mb-4">
-                        <div class="flex text-[yellow] text-xs">
+                        <div class="flex text-[#FFDB58] text-xs">
                             <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
                         </div>
                         <span class="ml-2 text-[10px] text-white font-bold uppercase">Verified WhatsApp</span>
